--- a/anatomica.css
+++ b/anatomica.css
@@ -1,3 +1,22 @@
 * {
     text-align: center;
+    background-color: rgb(43, 43, 43);
+    padding: 5px;
+}
+
+div {
+    margin: 20px;
+}
+
+button {
+    outline-width: 2px;
+    cursor: pointer;
+}
+
+.stageOne {
+    outline: green;
+}
+
+.stageTwo {
+    outline: greenyellow;
 }
