--- a/anatomica.css
+++ b/anatomica.css
@@ -19,4 +19,20 @@ button {
 
 .stageTwo {
     outline: greenyellow;
+    cursor: not-allowed;
+}
+
+.stageThree {
+    outline: rgb(255, 251, 0);
+    cursor: not-allowed;
+}
+
+.stageFour {
+    outline: rgb(255, 128, 24);
+    cursor: not-allowed;
+}
+
+.stageFive {
+    outline: rgb(253, 4, 4);
+    cursor: not-allowed;
 }
